login functionality - enable register. Other fixes, bugs

--- a/co-front/public/index.html
+++ b/co-front/public/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./assets/css/paper-dashboard.css">
     <link rel="stylesheet" href="./assets/css/gestionProductos.css">
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app"/>
+    <meta name="description" content="Store for electronics parts"/>
     
     <link rel="shortcut icon" scr="" type="image/x-icon"/>
 
@@ -41,7 +41,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>CO200 Electronics</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
